versions/V4.2/README.md
# Refine KA

## V4.2

- 新增政府政策栏目持续监控：扫描工信部及沪、浙、闽、赣政府/主管部门栏目页，从栏目中发现新发布的政策、申报、公示、认定、补贴、示范和荣誉信息。
- 首次运行建立栏目链接基线；后续运行只把相较上次新增的链接送入正文抓取和行业证据提取，避免反复处理同一批文章。
- 栏目地址、包含词、排除词和单栏目扫描上限集中保存在 `config/policy_sections.json`，便于扩展更多官方栏目。
- 页面运行状态单独显示政策栏目成功数及新增链接数；信息来源页展示由栏目自动发现的原始链接。
- 固定文章继续作为历史证据，栏目监控负责持续发现新文章，语义检索负责补充栏目之外的公开信息。

## V4.1

- “抓取最新公开数据”升级为语义检索：先读取37个NS行业及六类指标语义画像，再自动生成检索问题并发现近期网页。
- 当前免费发现渠道采用中文Google News RSS；搜索渠道为可替换模块，可进一步接入Brave、Tavily、Serper或公司内部搜索服务。
- 使用行业词变体、指标概念、行为信号、数值证据、地区与日期共同计算相关性，低相关候选不会进入评分。
- 每次运行轮转一批检索任务并记录游标，持续覆盖全部行业、地区和维度。
- 动态页面和固定官方源共同进入证据库；内容哈希负责去重，最近180天证据进入当前聚合。
- 每条行业证据增加“有效/无关”反馈按钮，人工复核结果会保存为语义正反例并影响后续相关性判断。
- 页面状态显示语义检索组数、候选页面数和最终观测数。

## V4.0

- 新增与行业筛选平行的企业筛选页面。
- 企业列表支持按地区、区/市和NS行业筛选，并可逐家进入七维详情。
- 企业筛选页采用独立可调权重，七项权重始终合计100%，不影响行业排名。
- 七个企业维度均预留得分、贡献、可信度、具体内容与证据链接位置；本版本先完成交互框架。
- 行业详情中的Top 50继续保留为快速候选池，与完整企业筛选页区分。
- 区/市筛选现已同时作用于行业排名：仅保留当地存在经营企业样本的NS行业，并在地区列及详情标题中显示具体区/市。城市级行业指标缺失时明确标记为省级行业分数，避免与城市数据混淆。

Refine KA 是供公司内部使用的行业与关键客户筛选工具。程序围绕 37 个 Schneider NS 行业，结合全国、上海、浙江、福建和江西的公开证据，对行业机会与区域企业候选池进行评分和筛选。

## 当前能力

- 37 个 NS 行业排名与战略分组。
- 全国、省份及区/地级市筛选。
- 行业评分权重始终合计 100%。
- 企业候选池覆盖上市公司、未上市融资企业、专精特新企业和重点项目企业。
- 企业以实际经营地归属，可依据总部、工厂、研发中心、分公司或项目所在地进入当地候选池。
- 行业和企业证据保留公开来源链接、可信度与覆盖率。
- Windows 本地运行及便携版打包。

## 评分口径

行业评分包括：出口/外需、工业增加值、招聘岗位、技术突破、政策导向、政府补贴/政府投资。

企业 Top 50 使用独立的公司级评分模型。缺失维度不参与加权计算，同时降低覆盖率。覆盖率表示已取得有效证据的维度权重占总权重的比例。

## 本地启动

```powershell
python app.py
```

也可以运行项目内的 Windows 启动脚本。当前源代码版本使用的本地端口以 `app.py` 中的 `PORT` 为准。

## 数据与安全

- 本仓库仅供公司内部使用，应保持 Private。
- 禁止提交账号密码、Cookie、API Key、访问令牌及个人敏感信息。
- `data/companies.json` 为程序企业候选池；每条正式企业记录应保留可追溯的公开证据。
- 本地数据库、缓存、PID、运行日志和便携版运行环境由 `.gitignore` 排除。

## 版本管理

- 功能或数据迭代均递增版本号。
- Commit 描述本次变化，正式交付版本创建对应 Git Tag。
- 可转发 ZIP 建议通过私有仓库的 Releases 分发。

## 当前版本

V3.7：修复便携版启动端口，并加入实际经营地口径及首批成长型、未上市企业候选池。

V3.8：在 Top 50 页面明确区分行业评分与企业评分。右侧滑杆只调整行业排名；企业 Top 50 采用独立的七维固定权重，并单独展示企业总分与企业证据覆盖率。
